# reference_model

./: .coderabbit.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: claude-dispatch.yml
cmake/: dependencies.cmake
docs/: TOSA_MLIR_INTEGRATION.md  advanced_tosa_operations.md
examples/: run_ref_model_examples.sh
examples/test_add_1x4x4x4_f32/: InputTensor-tf1.npy  model.pb  model.tflite  placeholder_0.npy  ref_ofm.npy  test.json  test_tf.pb
examples/test_conv2d_1x1_1x32x32x8_f32_st11_padSAME_dilat11/: InputTensor-tflite0.npy  model.pb  model.tflite  ref_ofm.npy  test.json  test_tf.pb  tflite_result.npy
examples/test_conv2d_1x1_1x32x32x8_qi8_st11_padSAME_dilat11/: InputTensor-tflite0.npy  model.tflite  placeholder_0.npy  test.json  tflite_result.npy
examples/test_fakequant_conv2d_1x1_1x32x32x8_qi8_st11_padSAME_dilat11/: placeholder_0.npy  placeholder_0_quant.npy  ref_ofm.npy  test.json  test_tf.pb
examples/test_lstm_stateful_13x21x3_f32/: model.tflite  placeholder_0.npy  tflite_result.npy
examples/test_stateful_op/: desc.json  test_variable_add.tosa  variable_0.npy
py_package/: __init__.py
reference_model/: CMakeLists.txt
reference_model/custom_op_example/: CMakeLists.txt  custom_op_example.cpp
reference_model/custom_tosa_ops/: CMakeLists.txt  attention_op.cpp  matrix_transform_op.cpp
reference_model/include/: config.h  custom_op_interface.h  custom_registry.h  debug_types.h  dtype.h  func_config.h  func_debug.h  generate.h  graph_status.h  load_library.h  model_common.h  model_runner.h  operators.h  tosa_advanced_attributes.h  types.h  verify.h  version.h
reference_model/python_bindings/: example.py  python_bindings.cpp
reference_model/samples/: model_runner_simple_sample.cpp
reference_model/src/: FINAL_SUCCESS_SUMMARY.md  README_graph_example.md  arith_util.h  array_proxy.h  build_test_graph.sh  command_line_utils.h  debug_modes.def  debug_types.h  dtype_limits.h  float_utils.h  func_config.cc  func_config.def  func_config.h  func_debug.cc  func_debug.cpp  func_debug.h  general_utils.h  graph_node.cc  graph_node.cpp  graph_node.h  load_library_win.cpp  main.cpp  model_runner.cc  model_runner.cpp  model_runner_impl.cc  model_runner_impl.cpp  model_runner_impl.h  operators.cc  quant_util.h  subgraph_traverser.cc  subgraph_traverser.cpp  subgraph_traverser.h  tensor.cc  tensor.cpp  tensor.h  test_graph_example.cpp  tosa_model_types.h  verify.cc
reference_model/src/generate/: generate_config.cpp  generate_dot_product.cc  generate_dot_product.cpp  generate_dot_product.h  generate_dot_product_states.cc  generate_dot_product_states.cpp  generate_entry.cc  generate_fixed_data.cc  generate_fixed_data.cpp  generate_fixed_data.h  generate_fp_special.cc  generate_fp_special.cpp  generate_fp_special.h  generate_full_range.cc  generate_full_range.cpp  generate_full_range.h  generate_int_special.cc  generate_pseudo_random.cc  generate_pseudo_random.cpp  generate_pseudo_random.h  generate_special.cc  generate_special.cpp  generate_special.h  generate_special_utils.h  generate_utils.cc  generate_utils.cpp  generate_utils.h
reference_model/src/ops/: activation_funcs.cc  activation_funcs.cpp  activation_funcs.h  advanced_tensor_ops.cpp  advanced_tensor_ops.h  advanced_tensor_ops_complete.cpp  comparison.cc  comparison.cpp  comparison.h  control_flow.cc  control_flow.cpp  control_flow.h  custom.cc  custom.cpp  custom.h  data_layout.cc  data_layout.cpp  data_layout.h  data_nodes.cc  data_nodes.h  ewise_binary.cc  ewise_binary.cpp  ewise_binary.h  ewise_ternary.cc  ewise_ternary.cpp  ewise_ternary.h  ewise_unary.cc  ewise_unary.cpp  ewise_unary.h  image.cc  image.cpp  image.h  op_factory.cc  op_factory.cpp  op_factory.h  op_factory_advanced.h  reduction.cc  reduction.cpp  reduction.h  scatter_gather.cc  (+11 more)
reference_model/src/verify/: CMakeLists.txt  verifiers.h  verify_abs_error.cc  verify_abs_error.cpp  verify_dot_product.cc  verify_dot_product.cpp  verify_entry.cc  verify_entry.cpp  verify_exact.cc  verify_exact.cpp  verify_fp_special.cc  verify_fp_special.cpp  verify_main.cpp  verify_reduce_product.cc  verify_reduce_product.cpp  verify_relative.cc  verify_relative.cpp  verify_rescale_inexact.cpp  verify_ulp.cc  verify_ulp.cpp  verify_utils.cc  verify_utils.cpp  verify_utils.h
reference_model/test/: CMakeLists_advanced.txt  generate_tests.cpp  model_runner_tests.cpp  ref_model_tests.cpp  test_advanced_tensor_ops.cpp  test_utils.h  verify_exe_testing.cpp  verify_tests.cpp
reference_model/test/include/: test_utils.h
reference_model/test/ref_model_tests/: activation_funcs_tests.cpp  data_layout_tests.cpp  dump_tensor_tests.cpp  ewise_binary_tests.cpp  ewise_ternary_tests.cpp  reduction_tests.cpp  tensor_ops_tests.cpp  type_conversion_tests.cpp
robot_simulation/: CMakeLists.txt  build.sh
scripts/: py-dev-env.bash  py-dev-env.sh
scripts/convert2conformance/: convert2conformance.py
scripts/json2fbbin/: json2fbbin.py
scripts/json2numpy/: json2numpy.py
scripts/operator_api/: README.md  generate_api.py
scripts/schemavalidation/: __init__.py  compliance-config.schema.json  datagen-config.schema.json  desc.schema.json  schemavalidation.py
scripts/xunit/: xunit.py
serialization/: CMakeLists.txt  attribute.def  attribute.h  operator.def  quant_info.def  quant_info.h  tosa.fbs  tosa_generated.h  tosa_serialization_handler.cpp  tosa_serialization_handler.h
verif/: README.md  tosa_error_if.py  tosa_ref_run.py  tosa_serializer.py  tosa_test_gen.py  tosa_test_runner.py  tosa_verif_build_tests.py  tosa_verif_run_ref.py
verif/checker/: color_print.py  tosa_result_checker.py  verifier.py
verif/conformance/: README.md  model_files.py  test_select.py  tosa_base_profile_framework_ops_info.json  tosa_base_profile_ops_info.json  tosa_ext_profile_ops_info.json  tosa_main_profile_ops_info.json  tosa_profiles.py  tosa_verif_conformance_generator.py
verif/frameworks/: __init__.py  arg_gen.py  ignored_failures.json  (+7 more)
(+98 files in other folders)
