# Copyright (c) 2021-2022 Arm Limited.
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = tosa-tools
# version = done by setuptools_scm in pyproject.toml
author = Arm Limited
#author_email =
description = TOSA tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.mlplatform.org/tosa/reference_model.git/
project_urls =
    Website = https://developer.mlplatform.org/w/tosa/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    flatbuffers == 2.0
python_requires = >=3.6
packages =
    runner
    generator
    xunit
    tosa
    serializer
package_dir =
    = verif
    xunit = scripts/xunit
    tosa = thirdparty/serialization_lib/python/tosa
    serializer = thirdparty/serialization_lib/python/serializer

[options.entry_points]
console_scripts =
    tosa_verif_run_ref = runner.tosa_verif_run_ref:main
    tosa_verif_build_tests = generator.tosa_verif_build_tests:main
